Adds background color picker, paired with @IongIer

--- a/apis/locales/de/user_config.json
+++ b/apis/locales/de/user_config.json
@@ -16,6 +16,7 @@
         "angled": "Schräg",
         "vertical": "Vertikal"
     },
+    "background_color": "Hintergrundfarbe",
     "game_speed": "Spielgeschwindigkeit:",
     "move_confirm": "Zugbestätigung:",
     "color_scheme": "Farbschema:",
