Changes how player profiles can filter games

--- a/apis/locales/ca/profile.json
+++ b/apis/locales/ca/profile.json
@@ -1,6 +1,6 @@
 {
     "game_buttons": {
-        "unstarted": "Partides pendents en tonejos",
+        "pending": "Pendent",
         "finished": "Finalitzades",
         "playing": "Jugant"
     },
